kubeflow/apps/katib/build/apps_v1_deployment_katib-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: apps|Deployment|kubeflow|katib-controller
  labels:
    katib.kubeflow.org/component: controller
  name: katib-controller
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      katib.kubeflow.org/component: controller
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        katib.kubeflow.org/component: controller
        katib.kubeflow.org/metrics-collector-injection: disabled
    spec:
      containers:
      - args:
        - --katib-config=/katib-config.yaml
        command:
        - ./katib-controller
        image: docker.io/kubeflowkatib/katib-controller:v0.16.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        name: katib-controller
        ports:
        - containerPort: 8443
          name: webhook
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 18080
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        volumeMounts:
        - mountPath: /tmp/cert
          name: cert
          readOnly: true
        - mountPath: /katib-config.yaml
          name: katib-config
          readOnly: true
          subPath: katib-config.yaml
      serviceAccountName: katib-controller
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: katib-webhook-cert
      - configMap:
          name: katib-config
        name: katib-config
