kubeflow/apps/katib/build/apps_v1_deployment_katib-db-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: apps|Deployment|kubeflow|katib-db-manager
  labels:
    katib.kubeflow.org/component: db-manager
  name: katib-db-manager
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      katib.kubeflow.org/component: db-manager
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        katib.kubeflow.org/component: db-manager
    spec:
      containers:
      - command:
        - ./katib-db-manager
        image: docker.io/kubeflowkatib/katib-db-manager:v0.16.0
        livenessProbe:
          failureThreshold: 5
          grpc:
            port: 6789
          initialDelaySeconds: 10
          periodSeconds: 60
        name: katib-db-manager
        ports:
        - containerPort: 6789
          name: api
