kubeflow/apps/katib/build/v1_service_katib-controller.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|kubeflow|katib-controller'
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
  labels:
    katib.kubeflow.org/component: controller
  name: katib-controller
  namespace: kubeflow
spec:
  ports:
  - name: webhook
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: metrics
    port: 8080
    targetPort: 8080
  - name: healthz
    port: 18080
    targetPort: 18080
  selector:
    katib.kubeflow.org/component: controller
