kubeflow/apps/katib/build/v1_service_katib-db-manager.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|kubeflow|katib-db-manager'
  labels:
    katib.kubeflow.org/component: db-manager
  name: katib-db-manager
  namespace: kubeflow
spec:
  ports:
  - name: api
    port: 6789
    protocol: TCP
  selector:
    katib.kubeflow.org/component: db-manager
  type: ClusterIP
