kubeflow/apps/katib/build/v1_service_katib-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|kubeflow|katib-mysql'
  labels:
    katib.kubeflow.org/component: mysql
  name: katib-mysql
  namespace: kubeflow
spec:
  ports:
  - name: dbapi
    port: 3306
    protocol: TCP
  selector:
    katib.kubeflow.org/component: mysql
  type: ClusterIP
