kubeflow/apps/katib/build/v1_service_katib-ui.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|kubeflow|katib-ui'
  labels:
    katib.kubeflow.org/component: ui
  name: katib-ui
  namespace: kubeflow
spec:
  ports:
  - name: ui
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    katib.kubeflow.org/component: ui
  type: ClusterIP
