kubeflow/apps/katib/build/security.istio.io_v1beta1_authorizationpolicy_katib-ui.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: security.istio.io|AuthorizationPolicy|kubeflow|katib-ui
  name: katib-ui
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      katib.kubeflow.org/component: ui
