kubeflow/apps/katib/build/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_katib.kubeflow.org.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/katib-webhook-cert
    internal.kpt.dev/upstream-identifier: admissionregistration.k8s.io|ValidatingWebhookConfiguration|default|katib.kubeflow.org
  name: katib.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: Cg==
    service:
      name: katib-controller
      namespace: kubeflow
      path: /validate-experiment
  name: validator.experiment.katib.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - experiments
  sideEffects: None
